Semana 3 Boostrap e idiomas (Corregido)

--- a/src/main/resources/templates/layout/plantilla.html
+++ b/src/main/resources/templates/layout/plantilla.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html
     xmlns="http://www.w3.org/1999/xhtml"
-    xmls:th="http://www.thymeleaf.org"
-    xmls:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
+    xmlns:th="http://www.thymeleaf.org"
+    xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
     <head th:fragment="head">
         <title>Techshop</title>
         <meta charset="UTF-8"/>
@@ -11,8 +11,8 @@
         <link rel="icon" type="image/png" sizes="96x96" href="/fav/favicon-96x96.png"/>
         <link rel="icon" type="image/png" sizes="256x256" href="/fav/favicon-256x256.png"/>
 
-        <link rel="stylesheet" th:href="@{/webjars/boostrap/css/boostrap.min.css"/>
-        <link rel="stylesheet" th:href="@{/webjars/font-awesome/css/all.css"/>
+        <link rel="stylesheet" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"/>
+        <link rel="stylesheet" th:href="@{/webjars/font-awesome/css/all.css}"/>
         <script th:src="@{/webjars/jquery/jquery.min.js}"></script>
         <script th:src="@{/webjars/popper.js/umd/popper.min.js}"></script>
         <script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
@@ -99,7 +99,7 @@
         </header>
 
         <footer th:fragment="footer" class="p-2 mt-5 bg-info text-white">
-            <p class="text-center lead">&COPY [[#{plantilla.derechos}]]</p>
+            <p class="text-center lead">&COPY; [[#{plantilla.derechos}]]</p>
         </footer>
 
     </body>
