Semana 4 Base de datos en la nube

--- a/src/main/resources/templates/categoria/listado.html
+++ b/src/main/resources/templates/categoria/listado.html
@@ -9,6 +9,19 @@
     <body> 
         <header th:replace="~{layout/plantilla :: header}"/>
         
+        <div class="section m-5">
+            <div class="card">
+                <div class="card-header">
+                    <h4>[[#{categoria.listado}]]</h4>
+                </div>
+                <div class="card-body">
+                    <ul>
+                        <li th:each="c : ${categorias}">[[${c.descripcion}]]</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        
         <footer th:replace="~{layout/plantilla :: footer}"/>
     </body>
 </html>
