--- a/src/main/resources/static/css/estilos.css
+++ b/src/main/resources/static/css/estilos.css
@@ -1,10 +1,12 @@
-body{
-    background-color: bisque;
+/* Estilos en modo oscuro */
+body {
+    background-color: #2a2a2a;
+    color: #ffffff;
     font-family: sans-serif;
 }
 
-header{
-    background-color: blue;
+header {
+    background-color: #333;
     position: fixed;
     top: 0;
     left: 0;
@@ -12,8 +14,8 @@ header{
     height: 90px;
 }
 
-aside{
-    background-color: green;
+aside {
+    background-color: #444;
     position: fixed;
     top: 90px;
     left: 0;
@@ -22,8 +24,8 @@ aside{
     padding: 10px;
 }
 
-section{
-    background-color: bisque;
+section {
+    background-color: #2a2a2a;
     overflow-y: scroll;
     position: fixed;
     top: 90px;
@@ -33,51 +35,84 @@ section{
     padding: 10px;
 }
 
-footer{
+footer {
     background-color: black;
     color: white;
     text-align: center;
     position: fixed;
-    left: 0%;
+    left: 0;
     width: 100%;
     bottom: 0;
     height: 20px;
 }
 
-nav{
+nav {
     display: flex;
     justify-content: space-between;
 }
 
-.nav-link{
+.nav-link {
     color: white;
     text-decoration: none;
 }
 
-.logo{
+.logo {
     font-size: 32px;
     font-weight: bold;
     padding-left: 40px;
     line-height: 90px;
 }
 
-.nav-menu{
+.nav-menu {
     display: flex;
     list-style: none;
     padding-right: 40px;
 }
 
-.nav-menu-item{
-    front-size: 18px;
+.nav-menu-item {
+    font-size: 18px;
     margin: 0 10px;
     line-height: 90px;
 }
 
-.enlace{
+.enlace {
     padding: 8px 12px;
     border-radius: 10px;
 }
 
-.enlace:hover{
+.enlace:hover {
     background-color: black;
+}
+
+/* Estilos para los formularios y modales */
+.modal-content {
+    background-color: #2a2a2a;
+    color: #ffffff;
+    border: 1px solid #444;
+}
+
+.modal-header {
+    background-color: #333;
+    color: #ffffff;
+    border-bottom: 1px solid #555;
+}
+
+.modal-footer {
+    background-color: #333;
+    border-top: 1px solid #555;
+}
+
+.form-select, .form-control {
+    background-color: #444;
+    color: #ffffff;
+    border: 1px solid #666;
+}
+
+.form-check-input {
+    background-color: #444;
+    border: 1px solid #666;
+}
+
+.btn-close {
+    filter: invert(1);
 }
