--- a/src/main/resources/templates/categoria/fragmentos.html
+++ b/src/main/resources/templates/categoria/fragmentos.html
@@ -129,7 +129,7 @@
                           enctype="multipart/form-data">
                         <input type="hidden" name="idCategoria" th:field="*{idCategoria}"/>
                         <input type="hidden" name="rutaImagen" th:field="*{rutaImagen}"/>
-                        <div class="row py-4 mb-4" style="background-color: #2a2a2a; color: #ffffff;">
+                        <div class="row py-4 mb-4">
                             <div class="col-md-4 d-grid">
                                 <a th:href="@{/categoria/listado}" class="btn btn-secondary">
                                     <i class="fas fa-arrow-left"></i> [[#{accion.regresar}]]
