--- a/src/main/resources/templates/layout/plantilla.html
+++ b/src/main/resources/templates/layout/plantilla.html
@@ -71,6 +71,37 @@
                 background-color: #2a2a2a !important;
                 color: #ffffff !important;
             }
+            .bg-primary {
+                background-color: #007bff !important;
+                color: #ffffff !important;
+            }
+
+            .bg-info {
+                background-color: #17a2b8 !important;
+                color: #ffffff !important;
+            }
+
+            .bg-warning {
+                background-color: #ffc107 !important;
+                color: #000000 !important;
+            }
+
+            .btn-primary {
+                background-color: #007bff !important;
+                border-color: #0056b3 !important;
+            }
+
+            .btn-info {
+                background-color: #17a2b8 !important;
+                border-color: #117a8b !important;
+            }
+
+            .btn-warning {
+                background-color: #ffc107 !important;
+                border-color: #d39e00 !important;
+                color: #000 !important;
+            }
+
         </style>
     </head>
     <body> 
