--- a/src/main/resources/templates/producto/fragmentos.html
+++ b/src/main/resources/templates/producto/fragmentos.html
@@ -150,7 +150,7 @@
                           enctype="multipart/form-data">
                         <input type="hidden" name="idProducto" th:field="*{idProducto}"/>
                         <input type="hidden" name="rutaImagen" th:field="*{rutaImagen}"/>
-                        <div class="row py-4 mb-4 bg-light">
+                        <div class="row py-4 mb-4">
                             <div class="col-md-4 d-grid">
                                 <a th:href="@{/producto/listado}" class="btn btn-primary">
                                     <i class="fas fa-arrow-left"></i> [[#{accion.regresar}]]
@@ -169,52 +169,41 @@
                             </div>
                         </div>
                         <div class="row">
-                            <div class="card">
+                            <div class="card" style="background-color: #2a2a2a; color: #ffffff; border: 1px solid #555;">
                                 <div class="card-header">
                                     <h4>[[#{accion.actualizar}]]</h4>
                                 </div>
                                 <div class="card-body">                                    
-
                                     <div class="mb-3">
                                         <label>[[#{producto.categoria}]]</label>
-                                        <select class="form-select" name="categoria.idCategoria" th:field="*{categoria.idCategoria}" style="background-color: #2a2a2a; color: #ffffff; border: 1px solid #555;">
+                                        <select class="form-select" name="categoria.idCategoria" th:field="*{categoria.idCategoria}" style="background-color: #333; color: #ffffff; border: 1px solid #666;">
                                             <option th:each="c : ${categorias}" th:value="${c.idCategoria}">[[${c.descripcion}]]</option>
                                         </select>
                                     </div>
-
                                     <div class="mb-3">
                                         <label for="descripcion">[[#{producto.descripcion}]]</label>
                                         <input type="text" class="form-control" name="descripcion" th:field="*{descripcion}" required="true" style="background-color: #444; color: #ffffff; border: 1px solid #666;" />
                                     </div>
-
                                     <div class="mb-3">
                                         <label>[[#{producto.detalle}]]</label>
                                         <textarea class="form-control" name="detalle" th:field="*{detalle}" rows="3" style="background-color: #444; color: #ffffff; border: 1px solid #666;"></textarea>
                                     </div>
-
                                     <div class="mb-3">
                                         <label>[[#{producto.precio}]]</label>
                                         <input type="number" class="form-control" name="precio" th:field="*{precio}" required="true" style="background-color: #444; color: #ffffff; border: 1px solid #666;" />
                                     </div>
-
                                     <div class="mb-3">
                                         <label>[[#{producto.existencias}]]</label>
                                         <input type="number" class="form-control" name="existencias" th:field="*{existencias}" required="true" style="background-color: #444; color: #ffffff; border: 1px solid #666;" />
                                     </div>
-
                                     <div class="mb-3">
                                         <label for="activo">[[#{producto.activo}]]</label>
-                                        <input class="form-check-input" 
-                                               type="checkbox" 
-                                               name="activo" 
-                                               id="activo"
-                                               th:field="*{activo}"/>
+                                        <input class="form-check-input" type="checkbox" name="activo" id="activo" th:field="*{activo}"/>
                                     </div>
                                     <div class="mb-3">
                                         <label for="imagen">[[#{producto.rutaImagen}]]</label>
-                                        <input class="form-control" type="file" name="imagenFile"
-                                               onchange="readURL(this);" />
-                                        <img id="blah" th:src="@{${producto.rutaImagen}}" alt="your image" height="200"/>
+                                        <input class="form-control" type="file" name="imagenFile" onchange="readURL(this);" style="background-color: #444; color: #ffffff; border: 1px solid #666;"/>
+                                        <img id="blah" th:src="@{${producto.rutaImagen}}" alt="your image" height="200" style="border: 1px solid #666;"/>
                                     </div>
                                 </div>
                             </div>
@@ -222,6 +211,9 @@
                     </form>
                 </div>
             </div>
+        </section>
+
+        </div>
         </section>
     </body>
 </html>
