Semana 10 Seguridad con BD

--- a/src/main/resources/templates/categoria/fragmentos.html
+++ b/src/main/resources/templates/categoria/fragmentos.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6"
       xmlns:th="http://www.thymeleaf.org">
     <head th:replace="~{layout/plantilla :: head}">
         <title>Techshop</title>
@@ -12,7 +13,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-3">   
-                        <button 
+                        <button sec:authorize="hasRole('ROLE_ADMIN')"
                             type="button" 
                             class="btn btn-success btn-block" 
                             data-bs-toggle="modal" 
@@ -82,7 +83,7 @@
                                         <th>[[#{categoria.descripcion}]]</th>
                                         <th>[[#{categoria.rutaImagen}]]</th>
                                         <th>[[#{categoria.activo}]]</th>
-                                        <th></th>
+                                        <th sec:authorize="hasRole('ROLE_ADMIN')"></th>
                                     </tr>
                                 </thead>
                                 <tbody>
@@ -91,7 +92,7 @@
                                         <td>[[${c.descripcion}]]</td>
                                         <td><img th:src="@{${c.rutaImagen}}" alt="no data" height="75"/></td>                                            
                                         <td th:text="${c.activo} ? 'Activa' : 'Inactiva'" />
-                                        <td><a th:href="@{/categoria/eliminar/}+${c.idCategoria}"
+                                        <td sec:authorize="hasRole('ROLE_ADMIN')"><a th:href="@{/categoria/eliminar/}+${c.idCategoria}"
                                                class="btn btn-danger">
                                                 <i class="fas fa-trash"></i> [[#{accion.eliminar}]]</a>
                                             <a th:href="@{/categoria/modificar/}+${c.idCategoria}"
