--- a/src/main/resources/templates/layout/plantilla.html
+++ b/src/main/resources/templates/layout/plantilla.html
@@ -113,7 +113,8 @@
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
-                        <ul class="navbar-nav">
+                        <ul sec:authorize="hasRole('ROLE_VENDEDOR')"
+                            class="navbar-nav">
                             <li class="nav-item px-2"><a class="nav-link" th:href="@{/categoria/listado}">[[#{plantilla.categorias}]]</a></li>
                             <li class="nav-item px-2"><a class="nav-link" th:href="@{/producto/listado}">[[#{plantilla.productos}]]</a></li>
                             <li class="nav-item dropdown">
@@ -128,7 +129,8 @@
                                     <li><a class="dropdown-item" th:href="@{/reportes/principal}">[[#{plantilla.reportes}]]</a></li>
                                 </ul>
                             </li>
-                            <li class="nav-item dropdown">
+                            <li sec:authorize="hasRole('ROLE_ADMIN')"
+                                class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" 
                                    data-bs-toggle="dropdown" 
                                    href="#" 
@@ -167,8 +169,29 @@
                             </li>
                         </ul>
                         <div id="resultBlock">
-
                         </div>
+                        <ul sec:authorize='!isAuthenticated()' class='navbar-nav'>
+                            <li class='nav-item'>
+                                <a class='nav-menu-link nav-link' th:href='@{/login}'>
+                                    <i class='fas fa-sign-in-alt'></i>
+                                </a>
+                            </li> 
+                        </ul>
+
+                        <ul sec:authorize='isAuthenticated()' class='navbar-nav'>
+                            <li class='nav-item my-auto'>
+                                <img th:src="@{${session.usuarioImagen}}" alt="..." height="40" class="rounded-circle"/> 
+                                <span sec:authentication='name'>Doe</span>
+                            </li>
+                            <li class='nav-item'>
+                                <form method="post" th:action='@{/logout}'>
+                                    <button class='btn btn-dark'>
+                                        <i class='fas fa-sign-out-alt'></i>
+                                    </button>
+                                </form>
+                            </li>
+                        </ul> 
+
                     </div>
                 </div>
             </nav>
